# userspace-resource-manager

./: CMakeLists.txt
client/APIs/: UrmAPIs.cpp
configs/: PropertiesConfig.yaml  ResourcesConfig.yaml
contextual-classifier/: CMakeLists.txt  ContextualClassifier.cpp  ContextualClassifierInit.cpp  FeatureExtractor.cpp  MLInference.cpp  libml_inference_lib.map
contextual-classifier/Include/: ContextualClassifier.h  MLInference.h
debian/: userspace-resource-manager.install
modula/: CMakeLists.txt
modula/Common/Include/: Message.h  Resource.h  Utils.h
modula/Components/: Logger.cpp
modula/Components/Include/: Logger.h
modula/CoreModules/: AuxRoutines.cpp  RAMConfigGenerator.cpp  UrmSettings.cpp
modula/CoreModules/Include/: AuxRoutines.h  RAMConfigGenerator.h  UrmSettings.h
resource-tuner/: CMakeLists.txt  libRestuneCore.map
resource-tuner/core/: PropertiesRegistry.cpp  RequestManager.cpp  TargetRegistry.cpp
resource-tuner/core/Include/: ClientDataManager.h  ClientGarbageCollector.h  CocoTable.h  PropertiesRegistry.h  PulseMonitor.h  RateLimiter.h  RequestManager.h  RequestQueue.h  ResourceRegistry.h  RestuneInternal.h  TargetRegistry.h
resource-tuner/core/Server/Include/: RequestReceiver.h
resource-tuner/init/: RestuneInit.cpp
resource-tuner/init/Include/: RestuneParser.h
resource-tuner/signals/Include/: AppConfigs.h  ExtFeaturesRegistry.h  SignalRegistry.h
tests/: README.md
tests/Configs/: ClassificationAppPredConfig.yaml
tests/Utils/: Setup.cpp
